--- a/Tartisia.html
+++ b/Tartisia.html
@@ -224,7 +224,7 @@
 
   <!-- Landing Page -->
   <div class="landing-page" id="landing-page">
-    <img src="image/LOGO.png" alt="Tartisia Cafe Logo" class="logo">
+    <img src="https://athirah09.github.io/Cafe/LOGO.png" alt="Tartisia Cafe Logo" class="logo">
     <h1 class="cafe-name">Tartisia Cafe</h1>
 
     <div class="categories">
@@ -257,15 +257,15 @@
       const categoryName = document.getElementById("category-name");
 
       const tartsMenu = [
-        { name: "Raspberries Tart", image: "image/Raspberries.png", price: "$4.50" },
-        { name: "Lemon Tart", image: "image/lemon.jpeg", price: "$5.00" },
-        { name: "Chocolate Tart", image: "image/choco tart.png", price: "$5.50" }
+        { name: "Raspberries Tart", image: "https://athirah09.github.io/Cafe/Raspberries.png", price: "$4.50" },
+        { name: "Lemon Tart", image: "https://athirah09.github.io/Cafe/lemon.jpeg", price: "$5.00" },
+        { name: "Chocolate Tart", image: "https://athirah09.github.io/Cafe/choco tart.png", price: "$5.50" }
       ];
 
       const drinksMenu = [
-        { name: "Espresso", image: "image/Iced Americano.jpeg", price: "$3.00" },
-        { name: "Latte", image: "image/S U M M E R.jpeg", price: "$4.00" },
-        { name: "Chocolate", image: "image/Chocolate Ganache Cake [120 Minutes].jpeg", price: "$4.50" }
+        { name: "Espresso", image: "https://athirah09.github.io/Cafe/Iced Americano.jpeg", price: "$3.00" },
+        { name: "Latte", image: "https://athirah09.github.io/Cafe/S U M M E R.jpeg", price: "$4.00" },
+        { name: "Chocolate", image: "https://athirah09.github.io/Cafe/Chocolate Ganache Cake [120 Minutes].jpeg", price: "$4.50" }
       ];
 
       // Function to display the menu items
